todo note re alternative solutions to the examples

--- a/vignettes/multiple_data_frames.Rmd
+++ b/vignettes/multiple_data_frames.Rmd
@@ -369,6 +369,8 @@ purrr::map(leuk_pf, head)
 
 ## Filter and plot:
 
+<!-- TODO: show how ugly this code is within standard tidyverse / base R -->
+
 ```{r}
 my_plot <- leuk_pf %>%
   # At first, data-frame `exprs` is active
